# nanoflow

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  callbacks.py  config.py  datasets.py  eval_imagenet.py  flow.py  flow_matching.py  image_transforms.py  inference.py  main.py  metrics.py  models.py  models_dit.py  ode_solvers.py  pyproject.toml  pyrightconfig.json  retry.py  train.py  train_grpo.py  trainer.py  unit.py  vae.py  viz.py
configs/: config.yaml  config_grpo.yaml  eval_imagenet.yaml
docs/: imagenet256_storage.md  imagenet_eval.md  runpod_docker.md  runpod_imagenet256.md  runpod_imagenet256_dit_chain.md  writeup_runbook.md
experiments/: cifar10.md  fashion_mnist.md  imagenet256.md  moons.md
rl/: classifier.py  compression.py  grpo.py  reward.py  rollout_client.py  sde_sampler.py
scripts/: benchmark_imagenet_latent_dataloader.py  benchmark_imagenet_vae_cache.py  benchmark_moe_packed.py  benchmark_moe_packed_e2e.py  build_and_upload_imagenet_latent_cache.sh  build_imagenet_latent_cache.py  convert_imagenet_latent_shards_to_mmap.py  estimate_dit_complexity.py  estimate_training_cost.py  preflight_imagenet_latent_mmap.py  run.sh  runpod_cuda_smoke.py  runpod_gcs_rsync.sh  runpod_hydrate_imagenet_latents.sh  runpod_list_h100_datacenters.sh  runpod_prepare_network_volume.sh  runpod_setup.sh  runpod_train_imagenet256_latent.sh  sky_runpod_chain.py  sky_runpod_docker_smoke.sh  sky_runpod_prepare_network_volume.sh  upload_imagenet256_to_gcs.sh  vae_smoke.py
tests/: test_compression_reward.py  test_ddp_metrics.py  test_eval_imagenet.py  (+13 more)
(+108 files in other folders)
