[project]
name = "nanoflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "clean-fid>=0.1.35",
    "diffusers>=0.37.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pillow>=10.0.0",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pyright>=1.1.409",
    "tensorboard>=2.20.0",
]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
